Fix to ios Flickering

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -970,3 +970,9 @@ footer {
 .text-danger {
     color: #a94442;
 }
+
+.aikavali {
+    font-weight: 700;
+    font-style: italic;
+    
+}
